01-Jul-2016 Fixes #276. Bam.Core.Module.DependsOn now checks for cyclic dependencies, and will throw an exception if found. Added CyclicDependenciesTest1, that will fail, to test for this.

30-Jun-2016 ======== Version 1.0.3 beta 2 Release ========

29-Jun-2016 Fixes #274. VisualStudio projects are now aware of resource files per configuration.

29-Jun-2016 Fixes #259. Generation of Windows version resource file now uses any data in the implementation of a Bam.Core.IProductDefinition in the package assembly.

29-Jun-2016 Fixes #273. Added Bam.Core.IProductDefinition, and an accessor on Bam.Core.Graph.ProductDefinition. At most one implementation of an IProductDefinition should be present in a package assembly. Properties on the interface are, Name (of product), MajorVersion, MinorVersion, PatchVersion (assuming semantic versioning), IsPreRelease (boolean), copyright notice, company name.

29-Jun-2016 Fixes #272. Added VisualCCommon.ICommonLinkerSettings.GenerateManifest boolean option, defaults to true. Can be used to avoid an error if a resource file refers to an external manifest file.

29-Jun-2016 Issue #259. C.ProceduralHeaderFileFromToolOutput and VisualCCommon.Compiler's public patches now also try to add include paths onto settings classes implementing the C.ICommonWinResourceCompilerSettings interface.

29-Jun-2016 Issue #259. Added attribute C.Thirdparty, which optionally accepts a path to a Windows .rc resource file. If the path is set, then this is used instead of generating an .rc file for versioning. This is to allow builds of thirdparty software to use their own versioning.

29-Jun-2016 Issue #259. Updated examples with dynamic libraries to define major, minor, and patch versions (to match the BuildAMation version), and define a Description macro to use in Windows versioning resource files.
