@@ -1,0 +1,31 @@
+<?xml version="1.0" encoding="utf-8"?>
+<PackageDefinition xsi:schemaLocation="http://www.buildamation.com ./Schema/BamPackageDefinitionV1.xsd" name="CyclicDependenciesTest2" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xmlns="http://www.buildamation.com">
+  <Description>A test for cyclic dependencies in C static libraries.</Description>
+  <Dependents>
+    <Package name="C" />
+    <Package name="Clang" version="Xcode4" />
+    <Package name="Clang" version="Xcode5" />
+    <Package name="Clang" version="Xcode6" default="true" />
+    <Package name="Clang" version="Xcode7" />
+    <Package name="Gcc" version="4.8" />
+    <Package name="Mingw" version="4.8.1" />
+    <Package name="NativeBuilder" />
+    <Package name="VisualC" version="10.0" />
+    <Package name="VisualC" version="11.0" />
+    <Package name="VisualC" version="12.0" default="true" />
+    <Package name="VisualC" version="14.0" />
+  </Dependents>
+  <BamAssemblies>
+    <BamAssembly name="Bam.Core" major="1" minor="0" patch="3" />
+  </BamAssemblies>
+  <DotNetAssemblies>
+    <DotNetAssembly name="System" requiredTargetFramework="4.0.30319" />
+    <DotNetAssembly name="System.Xml" requiredTargetFramework="4.0.30319" />
+    <DotNetAssembly name="System.Core" requiredTargetFramework="4.0.30319" />
+  </DotNetAssemblies>
+  <SupportedPlatforms>
+    <Platform name="Windows" />
+    <Platform name="Linux" />
+    <Platform name="OSX" />
+  </SupportedPlatforms>
+</PackageDefinition>
