@@ -1,3 +1,5 @@
+01-Jul-2016 Fixes #276. Two static libraries with cyclic dependencies are not detected with the Bam.Core.Module.DependsOn check, because there is no explicit dependency on them (it is deferred until link time). Added a static library specific check for cyclic dependencies. Added CyclicDependenciesTest2, that will fail, to test for this.
+
 01-Jul-2016 Fixes #276. Bam.Core.Module.DependsOn now checks for cyclic dependencies, and will throw an exception if found. Added CyclicDependenciesTest1, that will fail, to test for this.
 
 30-Jun-2016 ======== Version 1.0.3 beta 2 Release ========
